<resources>
    <string name="app_name">.</string>


    <string name="et_am_donoresId">Donor\'s ID</string>

    <string name="et_am_donorsName">Donor\'s Name</string>

    <string name="et_am_patientID">Patient\'s ID</string>

    <string name="et_am_patientname">Patient\'s Name</string>

    <string name="et_am_hospital">Hospital</string>

    <string name="et_am_bType">Blood Type</string>

    <string name="et_am_date">Date</string>
</resources>