<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FourthActivity"
    android:background="@color/bgbg">

    <TextView
        android:id="@+id/textView"
        android:layout_width="354dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:text="Appointment confirmation"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:id="@+id/et_am_donorsId"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:minHeight="48dp" android:inputType="textPersonName"
        android:hint="@string/et_am_donoresId" android:ems="10"
        />

    <EditText android:layout_height="wrap_content" android:layout_width="0dp" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.497" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="32dp"
        android:id="@+id/et_am_donorsName" app:layout_constraintTop_toBottomOf="@+id/et_am_donorsId" android:minHeight="48dp" android:inputType="textPersonName"
        android:hint="@string/et_am_donorsName" android:ems="10"/>

    <EditText android:layout_height="wrap_content" android:layout_width="0dp" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.502" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp"
        android:id="@+id/et_am_patientId" app:layout_constraintTop_toBottomOf="@+id/et_am_donorsName" android:minHeight="48dp" android:inputType="textPersonName"
        android:hint="@string/et_am_patientID" android:ems="10"/>

    <EditText android:layout_height="wrap_content" android:layout_width="0dp" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.497" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp"
        android:id="@+id/et_am_patientName" app:layout_constraintTop_toBottomOf="@+id/et_am_patientId" android:minHeight="48dp"
        android:inputType="textPersonName" android:hint="@string/et_am_patientname" android:ems="10"/>

    <EditText android:layout_height="wrap_content" android:layout_width="0dp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.497" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp" android:id="@+id/et_am_hospital" app:layout_constraintTop_toBottomOf="@+id/et_am_patientName" android:minHeight="48dp" android:inputType="textPersonName" android:hint="@string/et_am_hospital" android:ems="10"/>

    <EditText android:layout_height="wrap_content" android:layout_width="0dp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.497" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp" android:id="@+id/et_am_btype" app:layout_constraintTop_toBottomOf="@+id/et_am_hospital" android:minHeight="48dp" android:inputType="textPersonName" android:hint="@string/et_am_bType" android:ems="10"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_button"
        android:text="Confirm"
        android:textSize="24sp"
        app:backgroundTint="?attr/colorError"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.268" />

</androidx.constraintlayout.widget.ConstraintLayout>